// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots channels/ChannelItem App View 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiListItemText-root makeStyles-root MuiListItemText-multiline"
        >
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              1.11.3 (ARM64)
            </div>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    title="Release date"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots channels/ChannelItem No Arch 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
        >
          e
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiListItemText-root makeStyles-root MuiListItemText-multiline"
        >
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              1.11.3
            </div>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    title="Release date"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots channels/ChannelItem No Package 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
        >
          e
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiListItemText-root makeStyles-root MuiListItemText-multiline"
        >
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              No package
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots channels/ChannelItem Show Arch 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
        >
          e
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiListItemText-root makeStyles-root MuiListItemText-multiline"
        >
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              1.11.3 (ARM64)
            </div>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    title="Release date"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
